--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
          </a>
        </div>
        <div id="photo2" class="invisibile">
+          <a href="https://meanifederico.github.io/MeaniFedericoPortfolioDi/">
          <h3 class="scrittatendina">piccolo portfolio</h3>
+          </a>
        </div>
        <div id="photo3" class="invisibile">
          <a href="https://www.youtube.com/watch?v=aBph0gal2_M"> 
