--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
      </div>
      <div id="sottohome" class="piattohome">
        <div id="home1" class="invisibile">
-         <a href="https://www.instagram.com/aka.mea/"> 
+         <a href="https://meanifederico.github.io/MeaniFedericoSitoDi/"> 
           <h3 class="scrittatendina">ritorna alla home</h3> 
          </a>
        </div>
